新增菜单相关接口
